hphp/test/zend/good/ext/gd/tests/imagecharup_error3.php
<?php
$image = imagecreatetruecolor(180, 30);
$result = imagecharup($image, 'string', 5, 5, 'C', 1);

?>