hphp/test/zend/bad/ext-gd/imagestringup_error1.php
<?php

$result = imagestringup('string', 1, 5, 5, 'String', 1);

?>